lch: local testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ set(seqGraph_DIR /home/caronkey/.apps/localLibs/share/seqGraph/cmake)
 #find_package(seqGraph REQUIRED)
 aux_source_directory(./src LOCAL_HAP_SRC)
 include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(/home/eric/anaconda3/include)
 add_executable(localHap localhap.cpp ${LOCAL_HAP_SRC})
 
-target_link_libraries(localHap -lCbcSolver -lCbc -lOsi -lOsiCbc -lCgl -lOsiClp -lClp -lCoinUtils -llapack -lbz2 -lz -lhts)
+# target_link_libraries(localHap -lCbcSolver -lCbc -lOsi -lOsiCbc -lCgl -lOsiClp -lClp -lCoinUtils -llapack -lbz2 -lz -lhts)
+target_link_libraries(localHap /home/eric/anaconda3/lib/libCbcSolver.so /home/eric/anaconda3/lib/libCbc.so /home/eric/anaconda3/lib/libOsi.so /home/eric/anaconda3/lib/libOsiCbc.so /home/eric/anaconda3/lib/libCgl.so /home/eric/anaconda3/lib/libOsiClp.so /home/eric/anaconda3/lib/libClp.so /home/eric/anaconda3/lib/libCoinUtils.so /home/eric/anaconda3/lib/liblapack.so -lz -lhts)
 install(TARGETS localHap DESTINATION bin)
