Modify CMakeLists: reference to libz.so and libhts.so

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,6 @@ if (NOT $ENV{CONDA_PREFIX} STREQUAL "")
     message(STATUS "CURRENT CONDA PREFIX: $ENV{CONDA_PREFIX}")
     include_directories($ENV{CONDA_PREFIX}/include)
     link_directories($ENV{CONDA_PREFIX}/lib)
-    target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.so $ENV{CONDA_PREFIX}/lib/libCbc.so $ENV{CONDA_PREFIX}/lib/libOsi.so $ENV{CONDA_PREFIX}/lib/libOsiCbc.so $ENV{CONDA_PREFIX}/lib/libCgl.so $ENV{CONDA_PREFIX}/lib/libOsiClp.so $ENV{CONDA_PREFIX}/lib/libClp.so $ENV{CONDA_PREFIX}/lib/libCoinUtils.so $ENV{CONDA_PREFIX}/lib/liblapack.so -lz -lhts)
+    target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.so $ENV{CONDA_PREFIX}/lib/libCbc.so $ENV{CONDA_PREFIX}/lib/libOsi.so $ENV{CONDA_PREFIX}/lib/libOsiCbc.so $ENV{CONDA_PREFIX}/lib/libCgl.so $ENV{CONDA_PREFIX}/lib/libOsiClp.so $ENV{CONDA_PREFIX}/lib/libClp.so $ENV{CONDA_PREFIX}/lib/libCoinUtils.so $ENV{CONDA_PREFIX}/lib/liblapack.so $ENV{CONDA_PREFIX}/lib/libz.so $ENV{CONDA_PREFIX}/lib/libhts.so)
 endif ()
 install(TARGETS Ambigram DESTINATION bin)
