Fix problems on compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,11 @@ if (NOT $ENV{CONDA_PREFIX} STREQUAL "")
     message(STATUS "CURRENT CONDA PREFIX: $ENV{CONDA_PREFIX}")
     include_directories($ENV{CONDA_PREFIX}/include)
     link_directories($ENV{CONDA_PREFIX}/lib)
-    target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.so $ENV{CONDA_PREFIX}/lib/libCbc.so $ENV{CONDA_PREFIX}/lib/libOsi.so $ENV{CONDA_PREFIX}/lib/libOsiCbc.so $ENV{CONDA_PREFIX}/lib/libCgl.so $ENV{CONDA_PREFIX}/lib/libOsiClp.so $ENV{CONDA_PREFIX}/lib/libClp.so $ENV{CONDA_PREFIX}/lib/libCoinUtils.so $ENV{CONDA_PREFIX}/lib/liblapack.so $ENV{CONDA_PREFIX}/lib/libz.so $ENV{CONDA_PREFIX}/lib/libhts.so)
+    if(APPLE)
+        target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.dylib $ENV{CONDA_PREFIX}/lib/libCbc.dylib $ENV{CONDA_PREFIX}/lib/libOsi.dylib $ENV{CONDA_PREFIX}/lib/libOsiCbc.dylib $ENV{CONDA_PREFIX}/lib/libCgl.dylib $ENV{CONDA_PREFIX}/lib/libOsiClp.dylib $ENV{CONDA_PREFIX}/lib/libClp.dylib $ENV{CONDA_PREFIX}/lib/libCoinUtils.dylib $ENV{CONDA_PREFIX}/lib/liblapack.dylib $ENV{CONDA_PREFIX}/lib/libz.dylib $ENV{CONDA_PREFIX}/lib/libhts.dylib)
+    else()
+        target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.so $ENV{CONDA_PREFIX}/lib/libCbc.so $ENV{CONDA_PREFIX}/lib/libOsi.so $ENV{CONDA_PREFIX}/lib/libOsiCbc.so $ENV{CONDA_PREFIX}/lib/libCgl.so $ENV{CONDA_PREFIX}/lib/libOsiClp.so $ENV{CONDA_PREFIX}/lib/libClp.so $ENV{CONDA_PREFIX}/lib/libCoinUtils.so $ENV{CONDA_PREFIX}/lib/liblapack.so $ENV{CONDA_PREFIX}/lib/libz.so $ENV{CONDA_PREFIX}/lib/libhts.so)
+    endif()
+    
 endif ()
 install(TARGETS Ambigram DESTINATION bin)
